﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git Master
------------------------------------------------------------------------------------------------------------------------

ADDONS:
	- Fixed: Roundcube|PhpMyAdmin installers - Ensure that database tables exist (recovery case)
	- Fixed: PhpMyAdmin 4.1.0 is only compatible with MySQL Server version 5.5 and newer

DISTRO
	- Added: Packages file for Ubuntu Saucy Slamander
	- Added: Packages file for Ubuntu Trusty Tahr (experimental)

ENGINE:
	- Added: System (UNIX) user/group names are now stored in database
	- Added: IMSCP_CLEAR_SCREEN environment variable which allows to not clear the terminal screen at end of script
	- Changed: Event listeners are now persistent. This allow to avoid self-registering
	- Fixed: External command died with signal 9 (without core dump)
	- Fixed: Keep current unix user uid/gid when updating the SYSTEM_USER_PREFIX and SYSTEM_USER_MIN_UID parameters
	- Fixed: Pass-in domain data to the listeners which listen to the *HttpdBuildConfFile and *HttpdBuildConf events
	- Fixed: Proftpd server is down after update
	- Fixed: Removed useless file tests on directory deletion

GUI:
	- Added: quoteValue() function, which allow to quote string for use in SQL statements

PLUGINS:
	- Added: Support for local plugin configuration files (See data/persistent/plugins/README.md)
	- Updated: Plugin API to version 0.2.2

SETUP:
	- Fixed: Composer process timeout must be increased for slow connections
	- Fixed: Unable to add external repository (Lucid...)

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.7
------------------------------------------------------------------------------------------------------------------------

2013-11-21: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.7

CONFIG: