@@ -48,7 +48,6 @@
 #
 LogFile="{APACHE_LOG_DIR}/{DOMAIN_NAME}-combined.log"
 
-
 # Enter the log file type you want to analyze.
 # Possible values:
 #  W - For a web log file
@@ -59,7 +58,6 @@ LogFile="{APACHE_LOG_DIR}/{DOMAIN_NAME}-combined.log"
 # Default: W
 #
 LogType=W
-
 
 # Enter here your log format (Must match your web server config. See setup
 # instructions in documentation to know how to configure your web server to
@@ -119,7 +117,6 @@ LogType=W
 #
 LogFormat=1
 
-
 # If your log field's separator is not a space, you can change this parameter.
 # This parameter is not used if LogFormat is a predefined value (1,2,3,4)
 # Backslash can be used as escape character.
@@ -130,7 +127,6 @@ LogFormat=1
 # Default: " "
 #
 LogSeparator=" "
-
 
 # "SiteDomain" must contain the main domain name, or the main intranet web
 # server name, used to reach the web site.
@@ -150,7 +146,6 @@ LogSeparator=" "
 #
 SiteDomain="{DOMAIN_NAME}"
 
-
 # Enter here all other possible domain names, addresses or virtual host
 # aliases someone can use to access your site. Try to keep only the minimum
 # number of possible names/addresses to have the best performances.
@@ -163,8 +158,7 @@ SiteDomain="{DOMAIN_NAME}"
 # Note: You can also use @/mypath/myfile if list of aliases are in a file.
 # Example: "www.myserver.com localhost 127.0.0.1 REGEX[mydomain\.(net|org)$]"
 #
-HostAliases="www.{DOMAIN_NAME} REGEX[^.*\.{DOMAIN_NAME}$]"
-
+HostAliases="www.{DOMAIN_NAME} {ALIAS}.{DOMAIN_NAME}"
 
 # If you want to have hosts reported by name instead of ip address, AWStats
 # need to make reverse DNS lookups (if not already done in your log file).
@@ -182,9 +176,7 @@ HostAliases="www.{DOMAIN_NAME} REGEX[^.*\.{DOMAIN_NAME}$]"
 # 1 - DNS Lookup is fully enabled
 # 2 - DNS Lookup is made only from static DNS cache file (if it exists)
 # Default: 2
-# 
-DNSLookup=1
-
+DNSLookup=2
 
 # When AWStats updates its statistics, it stores results of its analysis in 
 # files (AWStats database). All those files are written in the directory
@@ -200,7 +192,6 @@ DNSLookup=1
 #
 DirData="{AWSTATS_CACHE_DIR}"
 
-
 # Relative or absolute web URL of your awstats cgi-bin directory.
 # This parameter is used only when AWStats is run from command line
 # with -output option (to generate links in HTML reported page).
@@ -208,7 +199,6 @@ DirData="{AWSTATS_CACHE_DIR}"
 # Default: "/cgi-bin"   (means awstats.pl is in "/yourwwwroot/cgi-bin")
 #
 DirCgi="{AWSTATS_ENGINE_DIR}"
-
 
 # Relative or absolute web URL of your awstats icon directory.
 # If you build static reports ("... -output > outputpath/output.html"), enter
@@ -218,7 +208,6 @@ DirCgi="{AWSTATS_ENGINE_DIR}"
 # Default: "/icon" (means you must copy icon directories in "/mywwwroot/icon")
 #
 DirIcons="/awstatsicons"
-
 
 # When this parameter is set to 1, AWStats adds a button on report page to
 # allow to "update" statistics from a web browser. Warning, when "update" is
@@ -235,7 +224,6 @@ DirIcons="/awstatsicons"
 # Default: 0
 #
 AllowToUpdateStatsFromBrowser=0
-
 
 # AWStats saves and sorts its database on a month basis (except if using
 # databasebreak option from command line). 
@@ -256,8 +244,6 @@ AllowToUpdateStatsFromBrowser=0
 #
 AllowFullYearView=3
 
-
-
 #-----------------------------------------------------------------------------
 # OPTIONAL SETUP SECTION (Not required but increase AWStats features)
 #-----------------------------------------------------------------------------
@@ -276,7 +262,6 @@ AllowFullYearView=3
 #
 EnableLockForUpdate=0
 
-
 # AWStats can do reverse DNS lookups through a static DNS cache file that was
 # previously created manually. If no path is given in static DNS cache file
 # name, AWStats will search DirData directory. This file is never changed.
@@ -288,7 +273,6 @@ EnableLockForUpdate=0
 # Default: "dnscache.txt"
 #
 DNSStaticCacheFile="dnscache.txt"
-
 
 # AWStats can do reverse DNS lookups through a DNS cache file that was created
 # by a previous run of AWStats. This file is erased and recreated after each
@@ -303,7 +287,6 @@ DNSStaticCacheFile="dnscache.txt"
 #
 DNSLastUpdateCacheFile="dnscachelastupdate.txt"
 
-
 # You can specify specific IP addresses that should NOT be looked up in DNS.
 # This option is used only if DNSLookup=1.
 # Note: Use space between each value.
@@ -313,7 +296,6 @@ DNSLastUpdateCacheFile="dnscachelastupdate.txt"
 # Default: ""
 #
 SkipDNSLookupFor=""
-
 
 # The following two parameters allow you to protect a config file from being
 # read by AWStats when called from a browser if web user has not been
@@ -325,7 +307,6 @@ SkipDNSLookupFor=""
 # Default: 0
 #
 AllowAccessFromWebToAuthenticatedUsersOnly=0
-
 
 # This parameter gives the list of all authorized authenticated users to view
 # statistics for this domain/config file. This parameter is used only if
@@ -359,7 +340,6 @@ AllowAccessFromWebToFollowingIPAddresses=""
 #
 CreateDirDataIfNotExists=0
 
-
 # You can choose in which format the Awstats history database is saved.
 # Note: Using "xml" format make AWStats building database files three times
 # larger than using "text" format.
@@ -369,7 +349,6 @@ CreateDirDataIfNotExists=0
 #
 BuildHistoryFormat=text
 
-
 # If you prefer having the report output pages be built as XML compliant pages
 # instead of simple HTML pages, you can set this to 'xhtml' (May not work
 # properly with old browsers).
@@ -378,7 +357,6 @@ BuildHistoryFormat=text
 # Default: html
 #
 BuildReportFormat=html
-
 
 # AWStats databases can be updated from command line of from a browser (when
 # used as a cgi program). So AWStats database files need write permission
@@ -395,7 +373,6 @@ BuildReportFormat=html
 #
 SaveDatabaseFilesWithPermissionsForEveryone=0
 
-
 # AWStats can purge log file, after analyzing it. Note that AWStats is able
 # to detect new lines in a log file, to process only them, so you can launch
 # AWStats as often as you want, even with this parameter to 0.
@@ -409,7 +386,6 @@ SaveDatabaseFilesWithPermissionsForEveryone=0
 # Default: 0
 #
 PurgeLogFile=0
-
 
 # When PurgeLogFile is setup to 1, AWStats will clean your log file after
 # processing it. You can however keep an archive file of all processed log
@@ -425,7 +401,6 @@ PurgeLogFile=0
 #
 ArchiveLogRecords=0
 
-
 # Each time you run the update process, AWStats overwrites the 'historic file'
 # for the month (awstatsMMYYYY[.*].txt) with the updated one.
 # When write errors occurs (IO, disk full,...), this historic file can be
@@ -439,14 +414,12 @@ ArchiveLogRecords=0
 #
 KeepBackupOfHistoricFiles=0
 
-
 # Default index page name for your web server.
 # Change : Effective for new updates only
 # Example: "index.php index.html default.html"
 # Default: "index.php index.html"
 #
 DefaultFile="index.html index.php index.htm"
-
 
 # Do not include access from clients that match following criteria.
 # If your log file contains IP addresses in host field, you must enter here
@@ -463,7 +436,6 @@ DefaultFile="index.html index.php index.htm"
 #
 SkipHosts=""
 
-
 # Do not include access from clients with a user agent that match following
 # criteria. If you want to exclude a robot, you should update the robots.pm
 # file instead of this parameter.
@@ -475,7 +447,6 @@ SkipHosts=""
 # Default: ""
 #
 SkipUserAgents=""
-
 
 # Use SkipFiles to ignore access to URLs that match one of following entries.
 # You can enter a list of not important URLs (like framed menus, hidden pages,
@@ -494,7 +465,6 @@ SkipUserAgents=""
 #
 SkipFiles="/stats/"
 
-
 # Use SkipReferrersBlackList if you want to exclude records coming from a SPAM
 # referrer. Parameter must receive a local file name containing rules applied
 # on referrer field. If parameter is empty, no filter is applied.
@@ -508,7 +478,6 @@ SkipFiles="/stats/"
 # with black list file provided with AWStats !
 #
 SkipReferrersBlackList=""
-
 
 # Include in stats, only accesses from hosts that match one of following
 # entries. For example, if you want AWStats to filter access to keep only
@@ -525,7 +494,6 @@ SkipReferrersBlackList=""
 #
 OnlyHosts=""
 
-
 # Include in stats, only accesses from user agent that match one of following
 # entries. For example, if you want AWStats to filter access to keep only
 # stats for visits from particular browsers, you can add their user agents
@@ -539,7 +507,6 @@ OnlyHosts=""
 #
 OnlyUserAgents=""
 
-
 # Include in stats, only accesses from authenticated users that match one of
 # following entries. For example, if you want AWStats to filter access to keep
 # only stats for authenticated users, you can add those users names in
@@ -551,7 +518,6 @@ OnlyUserAgents=""
 # Default: ""
 #
 OnlyUsers=""
-
 
 # Include in stats, only accesses to URLs that match one of following entries.
 # For example, if you want AWStats to filter access to keep only stats that
@@ -567,7 +533,6 @@ OnlyUsers=""
 #
 OnlyFiles=""
 
-
 # Add here a list of kind of url (file extension) that must be counted as
 # "Hit only" and not as a "Hit" and "Page/Download". You can set here all
 # image extensions as they are hit downloaded that must be counted but they
@@ -581,7 +546,6 @@ OnlyFiles=""
 # Default: "css js class gif jpg jpeg png bmp ico rss xml swf"
 #
 NotPageList="css js class gif jpg jpeg png bmp ico rss xml swf"
-
 
 # By default, AWStats considers that records found in web log file are
 # successful hits if HTTP code returned by server is a valid HTTP code (200
@@ -597,7 +561,6 @@ NotPageList="css js class gif jpg jpeg png bmp ico rss xml swf"
 #
 ValidHTTPCodes="200 304"
 
-
 # By default, AWStats considers that records found in mail log file are
 # successful mail transfers if field that represent return code in analyzed
 # log file match values defined by this parameter.
@@ -606,7 +569,6 @@ ValidHTTPCodes="200 304"
 # Default: "1 250"
 #
 ValidSMTPCodes="1 250"
-
 
 # Some web servers on some Operating systems (IIS-Windows) consider that a
 # login with same value but different case are the same login. To tell AWStats
@@ -617,7 +579,6 @@ ValidSMTPCodes="1 250"
 # 
 AuthenticatedUsersNotCaseSensitive=0
 
-
 # Some web servers on some Operating systems (IIS-Windows) considers that two
 # URLs with same value but different case are the same URL. To tell AWStats to
 # also considers them as one, set this parameter to 1.
@@ -627,14 +588,12 @@ AuthenticatedUsersNotCaseSensitive=0
 # 
 URLNotCaseSensitive=0
 
-
 # Keep or remove the anchor string you can find in some URLs.
 # Change : Effective for new updates only
 # Possible values: 0 or 1
 # Default: 0
 #
 URLWithAnchor=0
-
 
 # In URL links, "?" char is used to add parameter's list in URLs. Syntax is:
 # /mypage.html?param1=value1&param2=value2
@@ -645,7 +604,6 @@ URLWithAnchor=0
 # Default: "?;"
 #
 URLQuerySeparators="?;"
-
 
 # Keep or remove the query string to the URL in the statistics for individual
 # pages. This is primarily used to differentiate between the URLs of dynamic
@@ -664,7 +622,6 @@ URLQuerySeparators="?;"
 # 
 URLWithQuery=0
 
-
 # When URLWithQuery is on, you will get the full URL with all parameters in
 # URL reports. But among thoose parameters, sometimes you don't need a
 # particular parameter because it does not identify the page or because it's
@@ -681,7 +638,6 @@ URLWithQuery=0
 # Default: ""
 # 
 URLWithQueryWithOnlyFollowingParameters=""
-
 
 # When URLWithQuery is on, you will get the full URL with all parameters in
 # URL reports. But among thoose parameters, sometimes you don't need a
@@ -700,7 +656,6 @@ URLWithQueryWithOnlyFollowingParameters=""
 # 
 URLWithQueryWithoutFollowingParameters=""
 
-
 # Keep or remove the query string to the referrer URL in the statistics for
 # external referrer pages. This is used to differentiate between the URLs of
 # dynamic referrer pages. If set to 1, mypage.html?id=x and mypage.html?id=y
@@ -713,7 +668,6 @@ URLWithQueryWithoutFollowingParameters=""
 # 
 URLReferrerWithQuery=0
 
-
 # AWStats can detect setup problems or show you important informations to have
 # a better use. Keep this to 1, except if AWStats says you can change it.
 # Change : Effective immediatly
@@ -721,7 +675,6 @@ URLReferrerWithQuery=0
 # Default: 1
 #
 WarningMessages=1
-
 
 # When an error occurs, AWStats outputs a message related to errors. If you
 # want (in most cases for security reasons) to have no error messages, you
@@ -732,7 +685,6 @@ WarningMessages=1
 #
 ErrorMessages=""
 
-
 # AWStat can be run with debug=x parameter to output various informations
 # to help in debugging or solving troubles. If you want to allow this (not
 # enabled by default for security reasons), set this parameter to 0.
@@ -741,7 +693,6 @@ ErrorMessages=""
 # Default: 0
 #
 DebugMessages=0
-
 
 # To help you to detect if your log format is good, AWStats reports an error
 # if all the first NbOfLinesForCorruptedLog lines have a format that does not
@@ -755,7 +706,6 @@ DebugMessages=0
 #
 NbOfLinesForCorruptedLog=50
 
-
 # For some particular integration needs, you may want to have CGI links to
 # point to another script than awstats.pl.
 # Use the name of this script in WrapperScript parameter.
@@ -764,7 +714,6 @@ NbOfLinesForCorruptedLog=50
 # Default: ""
 #
 WrapperScript=""
-
 
 # DecodeUA must be set to 1 if you use Roxen web server. This server converts
 # all spaces in user agent field into %20. This make the AWStats robots, OS
@@ -775,7 +724,6 @@ WrapperScript=""
 # Default: 0
 #
 DecodeUA=0
-
 
 # MiscTrackerUrl can be used to make AWStats able to detect some miscellaneous
 # things, that can not be tracked on other way, like:
@@ -806,8 +754,6 @@ DecodeUA=0
 # Default: "/js/awstats_misc_tracker.js"
 #
 MiscTrackerUrl="/js/awstats_misc_tracker.js"
-
-
 
 #-----------------------------------------------------------------------------
 # OPTIONAL ACCURACY SETUP SECTION (Not required but increase AWStats features)
@@ -844,8 +790,6 @@ LevelForFileTypesDetection=2        # 0 disables File types detection.
 LevelForWormsDetection=0            # 0 disables Worms detection.
                                     # 2 reduces AWStats speed by 15%
 
-
-
 #-----------------------------------------------------------------------------
 # OPTIONAL APPEARANCE SETUP SECTION (Not required but increase AWStats features)
 #-----------------------------------------------------------------------------
@@ -858,7 +802,6 @@ LevelForWormsDetection=0            # 0 disables Worms detection.
 #
 UseFramesWhenCGI=1
 
-
 # This parameter asks your browser to open detailed reports into a different
 # window than the main page.
 # Possible values:
@@ -869,7 +812,6 @@ UseFramesWhenCGI=1
 #
 DetailedReportsOnNewWindows=1
 
-
 # You can add, in the HTML report page, a cache lifetime (in seconds) that
 # will be returned to the browser in HTTP header answer by server.
 # This parameter is not used when reports are built with -staticlinks option.
@@ -878,13 +820,11 @@ DetailedReportsOnNewWindows=1
 #
 Expires=0
 
-
 # To avoid too large web pages, you can ask AWStats to limit number of rows of
 # all reported charts to this number when no other limits apply.
 # Default: 1000
 #
 MaxRowsInHTMLOutput=1000
-
 
 # Set your primary language (ISO-639-1 language codes).
 # Possible values:
@@ -902,7 +842,6 @@ MaxRowsInHTMLOutput=1000
 #
 Lang="auto"
 
-
 # Set the location of language files.
 # Example: "/usr/share/awstats/lang"
 # Default: "./lang" (means lang directory is in same location than awstats.pl)
@@ -915,7 +854,6 @@ DirLang="{AWSTATS_WEB_DIR}/lang"
 # Default: 1
 #
 ShowMenu=1
-
 
 # You choose here which reports you want to see in the main page and what you
 # want to see in those reports.
@@ -1066,7 +1004,6 @@ ShowSMTPErrorsStats=0
 # Default: 0, Possible column codes: PHB
 ShowClusterStats=0
 
-
 # Some graphical reports are followed by the data array of values.
 # If you don't want this array (to reduce the report size for example), you
 # can set thoose options to 0.
@@ -1082,14 +1019,12 @@ AddDataArrayShowDaysOfWeekStats=1
 # Data array values for the ShowHoursStats report
 AddDataArrayShowHoursStats=1
 
-
 # In the Origin chart, you have stats on where your hits came from. You can
 # include hits on pages that come from pages of same sites in this chart.
 # Possible values: 0 or 1
 # Default: 0
 #
 IncludeInternalLinksInOriginSection=1
-
 
 # The following parameters can be used to choose the maximum number of lines
 # shown for the particular following reports.
@@ -1134,7 +1069,6 @@ MinHitKeyword = 1
 MaxNbOfEMailsShown = 20
 MinHitEMail   = 1
 
-
 # Choose if you want the week report to start on sunday or monday
 # Possible values:
 # 0 - Week starts on sunday
@@ -1142,7 +1076,6 @@ MinHitEMail   = 1
 # Default: 1
 #
 FirstDayOfWeek=1
-
 
 # List of visible flags that link to other language translations.
 # See Lang parameter for list of allowed flag/language codes.
@@ -1154,13 +1087,11 @@ FirstDayOfWeek=1
 #
 ShowFlagLinks=""
 
-
 # Each URL, shown in stats report views, are links you can click.
 # Possible values: 0 or 1
 # Default: 1
 #
 ShowLinksOnUrl=1
-
 
 # When AWStats builds HTML links in its report pages, it starts those links
 # with "http://". However some links might be HTTPS links, so you can enter
@@ -1173,19 +1104,16 @@ ShowLinksOnUrl=1
 #
 UseHTTPSLinkForUrl=""
 
-
 # Maximum length of URL part shown on stats page (number of characters).
 # This affects only URL visible text, links still work.
 # Default: 64
 #
 MaxLengthOfShownURL=64
 
-
 # You can enter HTML code that will be added at the top of AWStats reports.
 # Default: ""
 #
 HTMLHeadSection=""
-
 
 # You can enter HTML code that will be added at the end of AWStats reports.
 # Great to add advert ban.
@@ -1193,13 +1121,11 @@ HTMLHeadSection=""
 #
 HTMLEndSection=""
 
-
 # By default AWStats page contains meta tag robots=noindex,nofollow
 # If you want to have your statistics to be indexed, set this option to 1. 
 # Default: 0
 #
 MetaRobot=0
-
 
 # You can set Logo and LogoLink to use your own logo.
 # Logo must be the name of image file (must be in $DirIcons/other directory).
@@ -1209,13 +1135,11 @@ MetaRobot=0
 Logo="awstats_logo6.png"
 LogoLink="http://awstats.sourceforge.net"
 
-
 # Value of maximum bar width/height for horizontal/vertical HTML graphics bars.
 # Default: 260/90
 #
 BarWidth   = 260
 BarHeight  = 90
-
 
 # You can ask AWStats to use a particular CSS (Cascading Style Sheet) to
 # change its look. To create a style sheet, you can use samples provided with
@@ -1225,7 +1149,6 @@ BarHeight  = 90
 # Default: ""
 #
 StyleSheet=""
-
 
 # Those color parameters can be used (if StyleSheet parameter is not used)
 # to change AWStats look.
@@ -1252,8 +1175,6 @@ color_k="2EA495"				# Background color for number of bytes (Default = "2EA495")
 color_s="8888DD"				# Background color for number of search (Default = "8888DD")
 color_e="CEC2E8"				# Background color for number of entry pages (Default = "CEC2E8")
 color_x="C1B2E2"				# Background color for number of exit pages (Default = "C1B2E2")
-
-
 
 #-----------------------------------------------------------------------------
 # PLUGINS
@@ -1439,8 +1360,6 @@ color_x="C1B2E2"				# Background color for number of exit pages (Default = "C1B2
 #
 #LoadPlugin="graphapplet /awstatsclasses"				# EXPERIMENTAL FEATURE
 
-
-
 #-----------------------------------------------------------------------------
 # EXTRA SECTIONS
 #-----------------------------------------------------------------------------
@@ -1493,7 +1412,6 @@ color_x="C1B2E2"				# Background color for number of exit pages (Default = "C1B2
 #MaxNbOfExtra1=20
 #MinHitExtra1=1
 
-
 # There is also a global parameter ExtraTrackedRowsLimit that limits the
 # number of possible rows an ExtraSection can report. This parameter is
 # here to protect too much memory use when you make a bad setup in your
@@ -1505,7 +1423,6 @@ color_x="C1B2E2"				# Background color for number of exit pages (Default = "C1B2
 # Default: 500
 #
 ExtraTrackedRowsLimit=500
-
 
 #-----------------------------------------------------------------------------
 # INCLUDES
@@ -1522,4 +1439,3 @@ ExtraTrackedRowsLimit=500
 #
 
 #Include ""
-
